[gd_scene load_steps=5 format=3 uid="uid://3rvgkppwkvwm"]

[ext_resource type="Script" path="res://gui/inventory/scripts/secret_item_slot.gd" id="1_4skce"]
[ext_resource type="Shader" path="res://resources/assets/sprites/secret_item_hidden.gdshader" id="1_yysjl"]
[ext_resource type="Texture2D" uid="uid://bdea6ndihk0bp" path="res://resources/assets/sprites/rubber_duck.png" id="2_jlyau"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yt3p0"]
shader = ExtResource("1_yysjl")

[node name="SecretItemSlot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
offset_right = 16.0
offset_bottom = 16.0
script = ExtResource("1_4skce")

[node name="ItemShape" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_yt3p0")
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("2_jlyau")
stretch_mode = 3

[node name="ItemSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("2_jlyau")
stretch_mode = 3
